--- a/Snake on Chrome/popup.html
+++ b/Snake on Chrome/popup.html
@@ -2,7 +2,7 @@
 <html>
 	<head></head>
 	<body>
-		<iframe style="padding-top: 20px" width="700" height="500" frameborder="0" src="https://icreiuheciijc.github.io/Snake" autofocus></iframe>
+		<iframe style="padding-top: 20px" width="700" height="500" frameborder="0" src="https://hanwenzhu.github.io/Snake" autofocus></iframe>
 		<script src="popup.js"></script>
 	</body>
 </html>
